# solana-world-id-program

./: Anchor.toml  Cargo.toml  LICENSE  README.md  Trident.toml  package.json
.github/actions/setup-honggfuzz/: action.yaml
.github/actions/setup-rust/: action.yaml
.github/actions/setup-solana/: action.yaml
.github/actions/setup-trident/: action.yaml
.github/workflows/: run-fuzz-test.yaml  test.yaml
app/: bridge.ts  claimOwnership.ts  cleanup.ts  env.ts  init.ts  setRootExpiry.ts  transferOwnership.ts  verifyGroth16Proof.ts
programs/solana-world-id-example-program/: Cargo.toml
programs/solana-world-id-example-program/src/: lib.rs
programs/solana-world-id-example-program/src/instructions/: verify_and_execute.rs
programs/solana-world-id-onchain-template/: Cargo.toml
programs/solana-world-id-onchain-template/src/: lib.rs
programs/solana-world-id-onchain-template/src/instructions/: mod.rs  verify_and_execute.rs
programs/solana-world-id-program/: Cargo.toml
programs/solana-world-id-program/src/: error.rs  lib.rs
programs/solana-world-id-program/src/instructions/: admin.rs  clean_up_root.rs  close_signatures.rs  initialize.rs  mod.rs  post_signatures.rs  update_root_expiry.rs  update_root_with_query.rs  verify_groth16_proof.rs  verify_query.rs  verify_query_signatures.rs
programs/solana-world-id-program/src/processor/: mod.rs  verify_query.rs  verify_signatures.rs
programs/solana-world-id-program/src/state/: config.rs  guardian_signatures.rs  latest_root.rs  mod.rs  query_signature_set.rs  root.rs
programs/solana-world-id-program/src/state/ext/: mod.rs
programs/solana-world-id-program/src/state/ext/wormhole/: README.md
tests/: README.md  solana-world-id-example-program.ts  solana-world-id-program.ts
tests/accounts/core_bridge_mainnet/: guardian_set_0.json  guardian_set_1.json  guardian_set_2.json  guardian_set_3.json  guardian_set_5_mock.json  guardian_set_6_mock_expired.json  guardian_set_7_mock_no_quorum.json  guardian_set_8_mock_two_guardians.json  guardian_set_9_mock_nineteen_guardians.json
tests/helpers/: GuardianSignature.ts  config.ts  fmtTest.ts  guardianSet.ts  latestRoot.ts  root.ts  secp256k1.ts  verifyQuerySigs.ts  verifySignature.ts
tests/helpers/utils/: account.ts  hashing.ts  signaturesToSolanaArray.ts
trident-tests/fuzz_tests/: Cargo.toml  README.md
trident-tests/fuzz_tests/fuzz_0/: README.md  constants.rs  fuzz_instructions.rs  test_fuzz.rs
trident-tests/fuzz_tests/fuzz_0/crash/: addition-overflow.fuzz
trident-tests/fuzz_tests/fuzz_0/instructions/: initialize.rs  mod.rs  post_signatures.rs  update_root_with_query.rs  verify_groth16_proof.rs
trident-tests/fuzz_tests/fuzz_1/: README.md  fuzz_instructions.rs  test_fuzz.rs
trident-tests/fuzz_tests/fuzz_1/instructions/: claim_ownerhip.rs  initialize.rs  mod.rs  set_allowed_update_staleness.rs  set_root_expiry.rs  transfer_ownership.rs
trident-tests/fuzz_tests/fuzz_2/: README.md  constants.rs  fuzz_instructions.rs  test_fuzz.rs
trident-tests/fuzz_tests/fuzz_2/instructions/: initialize.rs  post_signatures.rs  update_root_with_query.rs
trident-tests/fuzz_tests/fuzz_3/: README.md  constants.rs  fuzz_instructions.rs  test_fuzz.rs
trident-tests/fuzz_tests/fuzz_3/instructions/: clean_up_root.rs  initialize.rs  mod.rs  post_signatures.rs  update_root_with_query.rs
trident-tests/fuzz_tests/fuzz_4/: README.md  constants.rs  fuzz_instructions.rs  test_fuzz.rs
trident-tests/fuzz_tests/fuzz_4/instructions/: mod.rs  post_signatures.rs  update_root_with_query.rs
trident-tests/fuzz_tests/fuzz_5/: README.md  constants.rs  fuzz_instructions.rs  test_fuzz.rs
trident-tests/fuzz_tests/fuzz_5/instructions/: initialize.rs  mod.rs  post_signatures.rs  update_root_with_query.rs  verify.rs
trident-tests/fuzz_tests/fuzz_6/: README.md  constants.rs  fuzz_instructions.rs  test_fuzz.rs
trident-tests/fuzz_tests/fuzz_6/crash/: addition-overflow.fuzz
trident-tests/fuzz_tests/fuzz_6/instructions/: initialize.rs  verify_n_execute.rs
trident-tests/fuzz_tests/fuzz_7/: README.md  constants.rs
trident-tests/fuzz_tests/fuzz_7/instructions/: initialize.rs  mod.rs  post_signatures.rs  update_root_with_query.rs  verify_n_execute.rs
trident-tests/fuzz_tests/fuzz_8/: README.md  constants.rs  fuzz_instructions.rs
trident-tests/fuzz_tests/fuzz_8/instructions/: verify_n_execute.rs
