[package]
name = "solana-world-id-onchain-template"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_world_id_onchain_template"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
trident-fuzzing = ["dep:trident-fuzz"]


[dependencies]
trident-derive-accounts-snapshots = { git = "https://github.com/Ackee-Blockchain/trident.git", branch = "develop" }
trident-fuzz = { git = "https://github.com/Ackee-Blockchain/trident.git", branch = "develop", optional = true }
anchor-lang = "0.30.1"
ethnum = "1.3.2"
solana-world-id-program = { path = "../solana-world-id-program", features = [
    "cpi",
] }
